Added identity cookie

--- a/BookStore.WebApplication/Views/Shared/_Layout.cshtml
+++ b/BookStore.WebApplication/Views/Shared/_Layout.cshtml
@@ -23,7 +23,15 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
+                            @if (User.Identity.IsAuthenticated)
+                            {
+                                <h3>Welcome @User.Identity.Name</h3>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
+                            }
+                            else
+                            {
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+                            }
                         </li>
                     </ul>
                 </div>
