--- a/BookStore.WebApplication/Views/Home/Index.cshtml
+++ b/BookStore.WebApplication/Views/Home/Index.cshtml
@@ -6,3 +6,18 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+@if(User.Identity.IsAuthenticated){
+    <table class="table table-sm">
+        <tr>
+            <th>Claims Property</th>
+            <th>Value</th>
+        </tr>
+    @foreach (var item in User.Claims)
+    {
+        <tr>
+            <td>@item.Type</td>
+            <td>@item.Value</td>
+        </tr>
+    }
+    </table>
+}
