--- a/BookStore.WebApplication/Views/Account/login.cshtml
+++ b/BookStore.WebApplication/Views/Account/login.cshtml
@@ -8,3 +8,4 @@
     <input type="password" name="Password"/>
     <input type="submit" value="Login"/>
 </form>
+<a asp-action="LoginWithGoogle" asp-controller="Account">Login with Google</a>
